--- a/package.json
+++ b/package.json
@@ -1,33 +1,44 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "name": "frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
-  "author": "Omkar Anabathula",
-  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^4.6.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-flash": "^0.0.2",
-    "express-session": "^1.17.3",
-    "flash": "^1.1.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.6.5",
-    "nodemon": "^2.0.21",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2",
-    "uuid-random": "^1.3.2",
-    "validator": "^13.9.0"
+    "@mui/icons-material": "^5.11.16",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
+    "clipboard": "^2.0.11",
+    "daisyui": "^2.51.6",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.5.0",
+    "highlight.js": "^11.8.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-countup": "^6.4.2",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
+    "react-router-dom": "^6.12.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "uuid-random": "^1.3.2"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.3.2"
   }
 }
